Added review use case from Xristos

--- a/2ο Παραδοτέο/Use-Cases/Files/Use-cases-v0.1.tex
+++ b/2ο Παραδοτέο/Use-Cases/Files/Use-cases-v0.1.tex
@@ -118,7 +118,7 @@
 
 \subsubsection*{Εναλλακτική Ροή 8: Αναζήτηση βιβλίου - Αυτό δεν υπάρχει:}
 \begin{enumerate}
-    \item[\ref{Ύπαρξη βιβλίου}.1.] Το σύστημα ελέγχει αν υπάρχουν διαθέσιμα βιβλία προς ενοικίαση που να πληρούν το κείμενο αναζήτησης και βλέπει ότι υπάρχουν.
+    \item[\ref{Ύπαρξη βιβλίου}.1.] Το σύστημα ελέγχει αν υπάρχουν διαθέσιμα βιβλία προς ενοικίαση που να πληρούν το κείμενο αναζήτησης και βλέπει ότι δεν υπάρχουν.
     \item[\ref{Ύπαρξη βιβλίου}.2.] Το σύστημα ενημερώνει τον χρήστη ότι δεν υπάρχουν διαθέσιμα βιβλία που να πληρούν τα κριτήρια αναζήτησης. 
 \end{enumerate}
 
@@ -153,7 +153,7 @@
         \label{Τέλος dispute resolved - Τέλος χρημάτων}
     \item Ο ενοικιαστής, αφού τελειώσει το βιβλίο, βρίσκεται πάλι με τον ιδιοκτήτη και του παραχωρεί το βιβλίο, έπειτα του οποίου ενημερώνουν και οι δύο το σύστημα ότι το βιβλίο έχει επιστραφεί.
         \label{Επιστροφή βιβλίου - Τέλος λεφτά δεν φτάνουν}
-    \item Το σύστημα, λάβει ενημέρωση επιστροφής βιβλίου και από τα δύο μέλη, σταματάει να χρεώνει τον ενοικιαστή και του επιστρέφει το "ποσό ασφαλείας".
+    \item Το σύστημα, αφού λάβει ενημέρωση επιστροφής βιβλίου και από τα δύο μέλη, σταματάει να χρεώνει τον ενοικιαστή και του επιστρέφει το "ποσό ασφαλείας".
         \label{Τέλος ενοικίασης}
 \end{enumerate}
 
@@ -215,13 +215,13 @@
     \item Το σύστημα αναζητά αν αυτό το βιβλίο υπάρχει ήδη διαθέσιμο από κάποιον άλλο χρήστη που το προσφέρει ήδη στην πλατφόρμα.
     \item Το σύστημα προχωράει στην καταχώρηση του αιτήματος.
     \item Εμφανίζεται μήνυμα που γράφει “Επιτυχής καταχώρηση αιτήματος”.
-    \item Ο χρήστης κλείνει το μήνυμα 
+    \item Ο χρήστης κλείνει το μήνυμα.
     \item Εμφανίζεται η λίστα των αιτημάτων ανανεωμένη με το νέο αίτημα.
 \end{enumerate}
 
 \subsubsection*{Εναλλακτική ροή 1: Ο χρήστης δεν έχει κάνει προηγούμενες αιτήσεις:}
 \begin{enumerate}
-    \item [2.1] Το σύστημα αντιλαμβάνεται ότι o χρήστης δεν έχει κάνει καμία προηγούμενη αίτηση, οπότε εμφανίζεται μια άδεια οθόνη με μοναδικό κουμπί την προσθήκη αίτησης.
+    \item [2.1] Το σύστημα αντιλαμβάνεται ότι o χρήστης δεν έχει κάνει καμία προηγούμενη αίτηση, οπότε εμφανίζεται μια άδεια οθόνη με μοναδική λειτουργία την προσθήκη αίτησης.
 \end{enumerate}
 
 \subsubsection*{Εναλλακτική ροή 2: Ο χρήστης αφαιρεί υπάρχουσα αίτηση:}
@@ -257,6 +257,35 @@
 \begin{enumerate}
     \item [5.3.1] Ο χρήστης απορρίπτει την ενοικίαση του βιβλίου.
     \item [5.3.2] Επιστρέφει στο βήμα 2 στη βασική ροή.
+\end{enumerate}
+
+\subsection{Αξιολόγηση άλλων χρηστών μετά από την ολοκλήρωση συναλλαγής}
+
+\subsubsection*{Βασική ροή <<Αξιολόγηση άλλων χρηστών μετά από την ολοκλήρωση συναλλαγής>>: Προσθήκη νέας αξιολόγησης χωρίς σχόλιο:}
+\begin{enumerate}
+    \item Από την οθόνη του ιστορικού συναλλαγών ο χρήστης επιλέγει μια συναλλαγή και διαλέγει να αξιολογήσει τον χρήστη με τον οποίο έκανε τη συναλλαγή.
+    \item Εμφανίζεται μια επιλογή για αξιολόγηση της μορφής 1-5 αστεριών, μαζί με προαιρετική προσθήκη σχολίου.
+    \item Ο χρήστης επιλέγει να κάνει αξιολόγηση μόνο με βάση τα αστεράκια.
+    \item Εμφανίζεται ένα pop-up με την επιλογή αξιολόγησης 1-5 (αστέρια).
+    \item Ο χρήστης κάνει την επιλογή του και πατάει apply.
+    \item Εμφανίζεται μήνυμα επιτυχής αξιολόγησης.
+    \item Ο χρήστης πατάει κλείσιμο.
+    \item Το σύστημα επιστρέφει τον χρήστη στην οθόνη του ιστορικού.
+\end{enumerate}
+
+\subsubsection*{Εναλλακτική ροή 1: Ο χρήστης κάνει αξιολόγηση προσθέτοντας και το προαιρετικό σχόλιο}
+\begin{enumerate}
+    \item [3.1] Ο χρήστης επιλέγει γραπτή αξιολόγηση μαζί με το προαιρετικό σχόλιο.
+    \item [3.2] Εμφανίζεται ένα pop-up με την επιλογή αξιολόγησης 1-5 (αστέρια), μαζί με ένα text field για το σχόλιο.
+    \item [3.3] Ο χρήστης συμπληρώνει το σχόλιο και τα αστεράκια και πατάει apply.
+    \item [3.4] Επιστροφή στο βήμα 8 της βασικής ροής.
+\end{enumerate}
+
+\subsubsection*{Εναλλακτική ροή 2: Ο χρήστης ακυρώνει την διαδικασία της αξιολόγησης}
+\begin{enumerate}
+    \item [5.1, 3.3.1] Ο χρήστης πατάει ακύρωση.
+    \item [5.2, 3.3.2] Εμφανίζεται μήνυμα αποτυχία αξιολόγησης.
+    \item [5.3, 3.3.3] Επιστροφή στο βήμα 8 της βασικής ροής.
 \end{enumerate}
 
 \end{document}
