Added Profile, Balance, Favorites/Notifications use cases from Nikos

--- a/2ο Παραδοτέο/Use-Cases/Files/Use-cases-v0.1.tex
+++ b/2ο Παραδοτέο/Use-Cases/Files/Use-cases-v0.1.tex
@@ -59,8 +59,6 @@
 
 \subsubsection*{Βασική Ροή <<Αναζήτηση βιβλίων / χρήστη / αιτήσεων>>: Αναζήτηση βιβλίων:}
 \begin{enumerate}
-    \item Το σύστημα προσπαθεί να συνδεθεί στη βάση δεδομένων και το κάνει με επιτυχία.
-        \label{Έλεγχος σύνδεσης στη βάση δεδομένων}
     \item Ο χρήστης επιλέγει φίλτρο αναζήτησης "βιβλία", με τύπο συναλλαγής "και τα δύο" (δηλαδή και από κοντά και ταχυδρομικώς) και εισάγει ένα κείμενο αναζήτησης (μπορεί να είναι και τίτλος βιβλίου και όνομα συγγραφέα).
         \label{Επιλογή τύπου αναζήτησης}
     \item Το σύστημα ελέγχει αν υπάρχουν διαθέσιμα βιβλία προς ενοικίαση που να πληρούν το κείμενο αναζήτησης και το τύπο συναλλαγής και βλέπει ότι υπάρχουν.
@@ -70,26 +68,20 @@
     \item Το σύστημα φορτώνει τη λίστα των ιδιοκτητών που προσφέρουν το βιβλίο που επιλέχθηκε και την προβάλλει στον χρήστη, μαζί με την τιμή του βιβλίου ανά μέρα, την πόλη που μένει ο κάθε χρήστης, το σκορ του (που προκύπτει από τα ratings άλλων χρηστών) και κουμπί που του επιτρέπει να κάνει αίτηση ενοικίασης του βιβλίου στον χρήστη αυτόν.
 \end{enumerate}
 
-\subsubsection*{Εναλλακτική Ροή 1: Δεν μπορεί να επιτευχθεί σύνδεση στη βάση δεδομένων:}
-\begin{enumerate}
-    \item[\ref{Έλεγχος σύνδεσης στη βάση δεδομένων}.1.] Το σύστημα διαπιστώνει ότι δεν μπορεί να συνδεθεί στη βάση δεδομένων.
-    \item[\ref{Έλεγχος σύνδεσης στη βάση δεδομένων}.2.] Το σύστημα ενημερώνει τον χρήστη ότι η πλατφόρμα αντιμετωπίζει τεχνικές δυσκολίες.
-\end{enumerate}
-
-\subsubsection*{Εναλλακτική Ροή 2: Αναζήτηση χρήστη - Αυτός υπάρχει:}
+\subsubsection*{Εναλλακτική Ροή 1: Αναζήτηση χρήστη - Αυτός υπάρχει:}
 \begin{enumerate}
     \item[\ref{Επιλογή τύπου αναζήτησης}.α.1.] Ο χρήστης επιλέγει φίλτρο αναζήτησης "χρήστης" και εισάγει ένα κείμενο αναζήτησης (το username του χρήστη που αναζητεί).
     \item[\ref{Επιλογή τύπου αναζήτησης}.α.2.] Το σύστημα ελέγχει αν υπάρχει άλλος χρήστης με το όνομα που ζήτησε ο χρήστης και βλέπει ότι υπάρχει.
     \item[\ref{Επιλογή τύπου αναζήτησης}.α.3.] Το σύστημα προβάλλει στον χρήστη το προφίλ του χρήστη που αναζήτησε, δηλαδή το username, το rating του, την τοποθεσία που μένει και το description που έχει ορίσει για τον λογαριασμό του. Επίσης προβάλλει ένα κουμπί προσθήκης χρήστη στη λίστα των αγαπημένων (το οποίο χρησιμοποιείται για το use case των notifications και αγαπημένων).
 \end{enumerate}
 
-\subsubsection*{Εναλλακτική Ροή 3: Αναζήτηση χρήστη - Αυτός δεν υπάρχει:}
+\subsubsection*{Εναλλακτική Ροή 2: Αναζήτηση χρήστη - Αυτός δεν υπάρχει:}
 \begin{enumerate}
     \item[\ref{Επιλογή τύπου αναζήτησης}.α.2.1.] Το σύστημα ελέγχει αν υπάρχει άλλος χρήστης με το όνομα που ζήτησε ο χρήστης και βλέπει ότι δεν υπάρχει.
     \item[\ref{Επιλογή τύπου αναζήτησης}.α.2.2.] Το σύστημα ενημερώνει τον χρήστη ότι ο χρήστης που αναζητεί δεν υπάρχει.
 \end{enumerate}
 
-\subsubsection*{Εναλλακτική Ροή 4: Αναζήτηση αίτησης - Αυτή υπάρχει:}
+\subsubsection*{Εναλλακτική Ροή 3: Αναζήτηση αίτησης - Αυτή υπάρχει:}
 \begin{enumerate}
     \item[\ref{Επιλογή τύπου αναζήτησης}.β.1.] Ο χρήστης επιλέγει φίλτρο αναζήτησης "αιτήσεις", με τύπο συναλλαγής "και τα δύο", και εισάγει ένα κείμενο αναζήτησης (το όνομα του βιβλίου για το οποίο αναζητά αν υπάρχουν αιτήσεις).
     \item[\ref{Επιλογή τύπου αναζήτησης}.β.2.] Το σύστημα ελέγχει αν υπάρχει αίτηση που να πληρεί τα κριτήρια αναζήτησης που ζήτησε ο χρήστης και διαπιστώνει ότι υπάρχει.
@@ -98,37 +90,37 @@
     \item[\ref{Επιλογή τύπου αναζήτησης}.β.5.] Το σύστημα φορτώνει τη λίστα των χρηστών που έχουν κάνει αίτηση για το βιβλίο που επιλέχθηκε και την προβάλλει στον χρήστη, μαζί με την τιμή που προτίθενται να πληρώσει ο κάθε χρήστης για το βιβλίο ανά μέρα, την πόλη που μένει ο καθένας, το σκορ τους και κουμπί που του επιτρέπει να κάνει αποδοχή της αίτησης.
 \end{enumerate}
 
-\subsubsection*{Εναλλακτική Ροή 5: Αναζήτηση αίτησης - Αυτή δεν υπάρχει:}
+\subsubsection*{Εναλλακτική Ροή 4: Αναζήτηση αίτησης - Αυτή δεν υπάρχει:}
 \begin{enumerate}
     \item[\ref{Επιλογή τύπου αναζήτησης}.β.2.1.] Το σύστημα ελέγχει αν υπάρχει αίτηση για το βιβλίο που αναζήτησε ο χρήστης και διαπιστώνει ότι δεν υπάρχει.
     \item[\ref{Επιλογή τύπου αναζήτησης}.β.2.2.] Το σύστημα ενημερώνει τον χρήστη ότι δεν υπάρχει αίτηση που να πληρεί τα κριτήρια αναζήτησης.
 \end{enumerate}
 
-\subsubsection*{Εναλλακτική Ροή 6: Αναζήτηση βιβλίου - Μόνο από κοντά:}
+\subsubsection*{Εναλλακτική Ροή 5: Αναζήτηση βιβλίου - Μόνο από κοντά:}
 \begin{enumerate}
     \item[\ref{Επιλογή τύπου αναζήτησης}.γ.1.] Ο χρήστης επιλέγει φίλτρο αναζήτησης "βιβλία", με τύπο συναλλαγής "μόνο από κοντά" και εισάγει ένα κείμενο αναζήτησης (μπορεί να είναι και τίτλος βιβλίου και όνομα συγγραφέα).
     \item[\ref{Επιλογή τύπου αναζήτησης}.γ.2.] Η περίπτωση χρήσης συνεχίζεται από το βήμα \ref{Ύπαρξη βιβλίου} της βασικής ροής.
 \end{enumerate}
 
-\subsubsection*{Εναλλακτική Ροή 7: Αναζήτηση βιβλίου - Μόνο ταχυδρομικώς:}
+\subsubsection*{Εναλλακτική Ροή 6: Αναζήτηση βιβλίου - Μόνο ταχυδρομικώς:}
 \begin{enumerate}
     \item[\ref{Επιλογή τύπου αναζήτησης}.δ.1.] Ο χρήστης επιλέγει φίλτρο αναζήτησης "βιβλία", με τύπο συναλλαγής "μόνο ταχυδρομικώς" και εισάγει ένα κείμενο αναζήτησης (μπορεί να είναι και τίτλος βιβλίου και όνομα συγγραφέα).
     \item[\ref{Επιλογή τύπου αναζήτησης}.δ.2.] Η περίπτωση χρήσης συνεχίζεται από το βήμα \ref{Ύπαρξη βιβλίου} της βασικής ροής.
 \end{enumerate}
 
-\subsubsection*{Εναλλακτική Ροή 8: Αναζήτηση βιβλίου - Αυτό δεν υπάρχει:}
+\subsubsection*{Εναλλακτική Ροή 7: Αναζήτηση βιβλίου - Αυτό δεν υπάρχει:}
 \begin{enumerate}
     \item[\ref{Ύπαρξη βιβλίου}.1.] Το σύστημα ελέγχει αν υπάρχουν διαθέσιμα βιβλία προς ενοικίαση που να πληρούν το κείμενο αναζήτησης και βλέπει ότι δεν υπάρχουν.
     \item[\ref{Ύπαρξη βιβλίου}.2.] Το σύστημα ενημερώνει τον χρήστη ότι δεν υπάρχουν διαθέσιμα βιβλία που να πληρούν τα κριτήρια αναζήτησης. 
 \end{enumerate}
 
-\subsubsection*{Εναλλακτική Ροή 9: Αναζήτηση αίτησης - Μόνο από κοντά:}
+\subsubsection*{Εναλλακτική Ροή 8: Αναζήτηση αίτησης - Μόνο από κοντά:}
 \begin{enumerate}
     \item[\ref{Επιλογή τύπου αναζήτησης}.β.1.α.1.] Ο χρήστης επιλέγει φίλτρο αναζήτησης "αιτήσεις", με τύπο συναλλαγής "μόνο από κοντά", και εισάγει ένα κείμενο αναζήτησης (το όνομα του βιβλίου για το οποίο αναζητά αν υπάρχουν αιτήσεις).
     \item[\ref{Επιλογή τύπου αναζήτησης}.β.1.α.2.] Η περίπτωση χρήσης συνεχίζεται από το βήμα 2.γ.1.2 της βασικής ροής.
 \end{enumerate}
 
-\subsubsection*{Εναλλακτική Ροή 10: Αναζήτηση αίτησης - Μόνο ταχυδρομικώς:}
+\subsubsection*{Εναλλακτική Ροή 9: Αναζήτηση αίτησης - Μόνο ταχυδρομικώς:}
 \begin{enumerate}
     \item[\ref{Επιλογή τύπου αναζήτησης}.β.1.β.1.] Ο χρήστης επιλέγει φίλτρο αναζήτησης "αιτήσεις", με τύπο συναλλαγής "μόνο ταχυδρομικώς", και εισάγει ένα κείμενο αναζήτησης (το όνομα του βιβλίου για το οποίο αναζητά αν υπάρχουν αιτήσεις).
     \item[\ref{Επιλογή τύπου αναζήτησης}.β.1.β.2.] Η περίπτωση χρήσης συνεχίζεται από το βήμα 2.γ.1.2 της βασικής ροής.
@@ -286,6 +278,169 @@
     \item [5.1, 3.3.1] Ο χρήστης πατάει ακύρωση.
     \item [5.2, 3.3.2] Εμφανίζεται μήνυμα αποτυχία αξιολόγησης.
     \item [5.3, 3.3.3] Επιστροφή στο βήμα 8 της βασικής ροής.
+\end{enumerate}
+
+\subsection{Προβολή και Επεξεργασία στοιχείων λογαριασμού χρήστη:}
+
+\subsubsection*{Βασική ροή <<Προβολής και επεξεργασίας στοιχείων λογαριασμού \\χρήστη>>:}
+\begin{enumerate}
+    \item Ο χρήστης επιλέγει να πάει στη σελίδα του προφίλ. 
+    \item Το σύστημα φορτώνει τα στοιχεία του χρήστη (username, email, περιγραφή, τοποθεσία, κινητό τηλέφωνο και εικόνα χρήστη) και τα εμφανίζει στον χρήστη.
+    \item Ο χρήστης επιλέγει να κάνει επεξεργασία των στοιχείων του και εισάγει νέα στοιχεία (εκτός του password και της εικόνας χρήστη που αναλύονται σε εναλλακτική ροή και του email που δεν μπορεί να αλλάξει). 
+    \item Το σύστημα ελέγχει αν τα στοιχεία έχουν τη σωστή μορφοποίηση, δηλαδή το username να έχει εύρος από 8-20 χαρακτήρες και δεν το έχει ήδη άλλος χρήστης, η περιγραφή μέχρι 150 χαρακτήρες, η τοποθεσία να είναι πραγματική και να υπάρχει στο χάρτη και το κινητό να είναι δεκαψήφιος αριθμός.
+    \item Οι παραπάνω έλεγχοι γίνονται και σημειώνουν επιτυχία.
+    \item Το σύστημα στέλνει email στον χρήστη και ενημερώνει για τις αλλαγές.
+    \item Ο χρήστης επιστρέφει στην οθόνη του προφίλ του και βλέπει τις ανανεωμένες πληροφορίες.
+\end{enumerate}
+
+\subsubsection*{Εναλλακτική ροή 1: Τα νέα στοιχεία που εισάγει ο χρήστης δεν τηρούν τους κανόνες μορφοποίησης:}
+\begin{enumerate}
+    \item [4.α.1] Το σύστημα ελέγχει τα στοιχεία (username ή περιγραφή τοποθεσία τηλέφωνο) και δεν τηρούνται οι προδιαγραφές.
+    \item [4.α.2] Το σύστημα εμφανίζει μήνυμα στον χρήστη ότι τα στοιχεία προς ανανέωση δεν έχουν κατάλληλη μορφοποίηση
+    \item [4.α.3] Το σύστημα επιστρέφει στη βασική ροή στο βήμα 2.  
+\end{enumerate}
+
+\subsubsection*{Εναλλακτική ροή 2: Το νέο username χρησιμοποιείται ήδη από άλλον χρήστη:}
+\begin{enumerate}
+    \item [4.β.1] Το σύστημα ελέγχει το νέο username και βλέπει ότι υπάρχει ήδη χρήστης με το username αυτό. 
+    \item [4.β.2] Το σύστημα εμφανίζει μήνυμα στον χρήστη ότι το username χρησιμοποιείται από άλλον χρήστη.  
+    \item [4.β.3] Το σύστημα επιστρέφει στη βασική ροή στο βήμα 2.
+\end{enumerate}
+
+\subsubsection*{Εναλλακτική ροή 3: Ο χρήστης επιθυμεί αλλαγή του κωδικού:}
+\begin{enumerate}
+    \item [3.α.1] Ο χρήστης επιλέγει αλλαγή του κωδικού του. Το σύστημα του ζητάει να συμπληρώσει τον παλιό κωδικό του.
+    \item [3.α.2] Ο χρήστης συμπληρώνει τον παλιό κωδικό και το σύστημα ελέγχει αν είναι σωστός.
+    \item [3.α.3] Ο κωδικός είναι σωστός και το σύστημα ζητάει τον νέο κωδικό (2 φορές).
+    \item [3.α.4] Ο χρήστης εισάγει το νέο κωδικό 2 φορές και είναι ίδιος.
+    \item [3.α.5] Το σύστημα ενημερώνει ότι έχει αλλάξει ο κωδικός (με αναδυόμενη ειδοποίηση).
+    \item [3.α.6] Το σύστημα επιστρέφει στο βήμα 6 της βασικής ροής.
+\end{enumerate}
+
+\subsubsection*{Εναλλακτική ροή 4: Ο παλιός κωδικός κατά την αλλαγή κωδικού δεν είναι σωστός:}
+\begin{enumerate}
+    \item [3.α.2.1] Το σύστημα καταλαβαίνει ότι ο παλιός κωδικός που εισήγαγε ο χρήστης είναι λανθασμένος.
+    \item [3.α.2.2] Το σύστημα ενημερώνει τον χρήστη ότι ο παλιός κωδικός είναι λανθασμένος.
+    \item [3.α.2.3] Το σύστημα επιστρέφει στο βήμα 1 της εναλλακτικής ροής 3.
+\end{enumerate}
+
+\subsubsection*{Εναλλακτική ροή 5: Οι νέοι κωδικοί που εισήγαγε ο χρήστης δεν είναι ίδιοι:}
+\begin{enumerate}
+    \item [3.α.4.1] Το σύστημα καταλαβαίνει ότι οι δύο νέοι κωδικοί που εισήγαγε ο χρήστης είναι ίδιοι.
+    \item [3.α.4.2] Το σύστημα ενημερώνει τον χρήστη ότι οι δύο νέοι κωδικοί είναι διαφορετικοί.
+    \item [3.α.4.3] Το σύστημα επιστρέφει στο βήμα 1 της εναλλακτικής ροής 3.
+\end{enumerate}
+
+\subsubsection*{Εναλλακτική ροή 6: Ο χρήστης επιθυμεί να αλλάξει την εικόνα προφίλ του:}
+\begin{enumerate}
+    \item [3.β.1] Ο χρήστης επιλέγει αλλαγή την εικόνα προφίλ του. Το σύστημα του ζητάει να ανεβάσει την νέα εικόνα.
+    \item [3.β.2] Ο χρήστης ανεβάζει την εικόνα και το σύστημα ελέγχει αν το αρχείο είναι τύπου εικόνας και ότι έχει ανάλυση μικρότερη από 1000x1000.
+    \item [3.β.3] Το σύστημα καταλαβαίνει ότι η εικόνα είναι σωστού τύπου αρχείου και ότι έχει ανάλυση μέσα στις προδιαγραφές, και εφαρμόζει την αλλαγή.
+    \item [3.β.5] Το σύστημα ενημερώνει ότι έχει αλλάξει η εικόνα χρήστη.
+    \item [3.β.6] Το σύστημα επιστρέφει στο βήμα 6 της βασικής ροής.
+\end{enumerate}
+
+\subsubsection*{Εναλλακτική ροή 7: Το αρχείο εικόνας δεν πληρεί τις προδιαγραφές:}
+\begin{enumerate}
+    \item [3.β.3.1] Το σύστημα καταλαβαίνει ότι η εικόνα είναι λάθους τύπου αρχείου ή ότι δεν έχει ανάλυση μέσα στις προδιαγραφές.
+    \item [3.β.3.2] Το σύστημα ενημερώνει τον χρήστη ότι η εικόνα που ανέβασε δεν έχει σωστή μορφή αρχείου ή ότι η ανάλυση είναι μεγαλύτερη από το όριο των 1000x1000.
+    \item [3.β.3.3] Το σύστημα επιστρέφει στο βήμα 1 της εναλλακτικής ροής 6.
+\end{enumerate}
+
+\subsection{Επεξεργασία χρηματικού υπολοίπου χρήστη}
+
+\textbf{Σημείωση: } Στο παρακάτω use case, ορισμένα βήματα αναφέρονται σε επιλογή τρόπου πληρωμής (πχ προσθήκη πιστωτικής / χρεωστικής κάρτας). Αυτά τα βήματα θα τα παραλείψουμε για το project του μαθήματος και ο χρήστης θα διαλέγει απευθείας το ποσό, αλλά τα αναφέρουμε επειδή θα ήταν αναγκαία για να φτιαχτεί το έργο στην πραγματικότητα.
+
+\subsubsection*{Βασική ροή <<Επεξεργασίας χρηματικού υπολοίπου χρήστη>>: Προσθήκη χρημάτων:}
+\begin{enumerate}
+    \item Ο χρήστης βρίσκεται στη σελίδα του προφίλ του και επιλέγει την επιλογή του χρηματικού υπόλοιπου. Το σύστημα τον οδηγεί σε αυτή τη σελίδα και του εμφανίζει επιλογές για να προσθέσει χρήματα στο υπόλοιπό του, να αφαιρέσει χρήματα από το υπόλοιπό του, ή να προβάλλει το διαθέσιμο υπόλοιπό του.
+    \item Ο χρήστης επιλέγει προσθήκη χρημάτων και οδηγείται σε μια οθόνη που του ζητάει μέθοδο πληρωμής για online πληρωμές.
+    \item Ο χρήστης επιλέγει τη μέθοδο πληρωμής και το σύστημα ζητάει τα απαραίτητα πιστοποιητικά/κωδικούς.
+    \item Το σύστημα ελέγχει τα πιστοποιητικά (ανάλογα με τον τρόπο πληρωμής τα πιστοποιητικά μπορεί να διαφέρουν όπως λογαριασμοί τραπεζών, κωδικοί από κάρτες).
+    \item Τα πιστοποιητικά είναι σωστά (διασύνδεση συστήματος με τραπεζικά συστήματα για επαλήθευση) και το σύστημα ρωτάει το χρήστη τι ποσό επιθυμεί να μεταφέρει.
+    \item Ο χρήστης εισάγει το ποσό και το σύστημα ελέγχει αν έχει αντίστοιχο διαθέσιμο υπόλοιπο ο χρήστης.
+    \item Ο χρήστης έχει το ποσό και το σύστημα προχωρά τη συναλλαγή.
+    \item Το σύστημα ενημερώνει το χρήστη για την συναλλαγή που έγινε μέσω email, αλλά και με παραθυράκι και τον ρωτάει αν θέλει να πραγματοποιήσει άλλη συναλλαγή/να ελέγξει το υπόλοιπό.
+    \item Ο χρήστης επιλέγει ότι δεν θέλει να πραγματοποιήσει άλλη συναλλαγή/να ελέγξει το υπόλοιπο και το σύστημα οδηγείται πάλι στην οθόνη του προφίλ του.
+\end{enumerate}
+
+\subsubsection*{Εναλλακτική ροή 1: Τα δικαιολογητικά πληρωμής δεν αντιστοιχούν σε λογαριασμό:}
+\begin{enumerate}
+    \item [5.1] Το σύστημα βρίσκει ότι τα δικαιολογητικά πληρωμής δεν αντιστοιχούν σε λογαριασμό.
+    \item [5.2] Το σύστημα ενημερώνει τον χρήστη για την αστοχία.
+    \item [5.3] Η ροή συνεχίζει από το βήμα 3 της βασικής ροής.
+\end{enumerate}
+
+\subsubsection*{Εναλλακτική ροή 2: Μη επαρκές υπόλοιπο:}
+\begin{enumerate}
+    \item [7.1] Ο χρήστης δεν έχει επαρκές υπόλοιπο σύμφωνα με το ποσό που δήλωσε ότι θέλει να μεταφέρει στην εφαρμογή.
+    \item [7.2] Το σύστημα ενημερώνει τον χρήστη αντίστοιχα.
+    \item [7.3] Το σύστημα οδηγεί πίσω στο βήμα 6 της βασικής ροής.
+\end{enumerate}
+
+\subsubsection*{Εναλλακτική ροή 3: Επιλογή επιστροφής:}
+\begin{enumerate}
+    \item [9.1] Ο χρήστης επιλέγει ότι δεν θέλει να προχωρήσει σε άλλη συναλλαγή ή να δει το υπόλοιπό του.
+    \item [9.2] Η ροή συνεχίζει από το βήμα 1 της βασικής ροής.
+\end{enumerate}
+
+\subsubsection*{Εναλλακτική ροή 4: Επιλογή προβολής χρηματικού υπολοίπου:}
+\begin{enumerate}
+    \item [2.α.1] Ο χρήστης επιλέγει show balance και το σύστημα ελέγχει το ποσό που έχει ο χρήστης στο προφίλ του στην εφαρμογή.
+    \item [2.α.2] Το σύστημα επιστρέφει το ποσό με ένα παράθυρο.
+    \item [2.α.3] Η ροή συνεχίζει από το βήμα 1 της βασικής ροής.
+\end{enumerate}
+
+\subsubsection*{Εναλλακτική ροή 5: Επιλογή αφαίρεσης χρημάτων από τον λογαριασμό:}
+\begin{enumerate}
+    \item [2.β.1] Ο χρήστης επιλέγει να του επιστραφούν τα χρήματά του πίσω.
+    \item [2.β.2] Το σύστημα εμφανίζει στον χρήστη τους λογαριασμούς και τα μέσα πληρωμής που έχει προσθέσει προηγουμένως.
+    \item [2.β.3] Ο χρήστης εισάγει τον λογαριασμό και αναφέρει το ποσό που θέλει να αφαιρέσει από τον λογαριασμό.
+    \item [2.β.4] Το σύστημα ελέγχει αν το ποσό που εισήγαγε υπερβαίνει το υπόλοιπό του και βλέπει ότι αυτό δεν ισχύει. 
+    \item [2.β.5] Το σύστημα μεταφέρει τα λεφτά και αφαιρεί το ποσό από τον λογαριασμό του χρήστη.
+    \item [2.β.6] Το σύστημα ενημερώνει τον χρήστη ότι η μεταφορά έγινε με επιτυχία και του στέλνει συνοδευτικό email.
+    \item [2.β.7] Ο χρήστης μεταφέρεται στην αρχική σελίδα προβολής του υπολοίπου του.
+\end{enumerate}
+
+\subsubsection*{Εναλλακτική ροή 6: Ο χρήστης δεν έχει το ποσό στο λογαριασμό του που θέλει να αφαιρέσει:}
+\begin{enumerate}
+    \item [2.β.4.1] Το σύστημα ελέγχει αν το ποσό που εισήγαγε υπερβαίνει το υπόλοιπό του και βλέπει ότι αυτό ισχύει. 
+    \item [2.β.4.2] Το σύστημα ενημερώνει τον χρήστη κατάλληλα.
+    \item [2.β.4.3] Η ροή συνεχίζεται από το βήμα 3 της εναλλακτικής ροής 5.
+\end{enumerate}
+
+\subsection{Επεξεργασία λίστας αγαπημένων και χρήση συστήματος ειδοποιήσεων}
+
+\subsubsection*{Βασική ροή <<Επεξεργασία λίστας αγαπημένων και χρήση συστήματος ειδοποιήσεων>>: Προσθήκη στην λίστα αγαπημένων και προβολή ειδοποίησης:}
+\begin{enumerate}
+    \item Ο χρήστης προβάλλει το προφίλ ενός χρήστη (από την αναζήτηση χρήστη ή από προηγούμενη συναλλαγή) και επιλέγει να τον προσθέσει στη λίστα των αγαπημένων του.
+    \item Το σύστημα ελέγχει αν υπάρχει ήδη προσθεμένος στην λίστα αγαπημένων ο χρήστης με αυτό το email.
+    \item To σύστημα βλέπει ότι δεν είναι προσθεμένος αυτός ο χρήστης και τον προσθέτει στη λίστα αγαπημένων.
+    \item Ο χρήστης επιλέγει εμφάνιση λίστας αγαπημένων, και βλέπει ότι έχει προστεθεί το όνομα που επέλεξε.
+    \item Ο χρήστης που προστέθηκε στη λίστα αγαπημένων προσθέτει ένα βιβλίο στην πλατφόρμα προς ενοικίαση ή κάνει μια νέα αίτηση.
+    \item Η πλατφόρμα το αντιλαμβάνεται και προσθέτει μια νέα ειδοποίηση στην οθόνη ειδοποιήσεων του αρχικού χρήστη.
+    \item Ο αρχικός χρήστης προβάλλει τις ειδοποιήσεις του και βλέπει την νέα ειδοποίηση που προστέθηκε.
+    \item Ο χρήστης επιλέγει ένα βιβλίο που βλέπει στη λίστα ειδοποιήσεων, το οποίο ανάρτησε ένας αγαπημένος χρήστης του προς ενοικίαση.
+    \item Το σύστημα μεταβιβάζει τον χρήστη αυτόματα στην σελίδα που αυτός μπορεί να νοικιάσει το βιβλίο.
+\end{enumerate}
+
+\subsubsection*{Εναλλακτική ροή 1: Ήδη προσθεμένος χρήστης:}
+\begin{enumerate}
+    \item [3.1] Ο χρήστης πατάει κλικ σε ένα username για να το προσθέσει στη λίστα αγαπημένων. Το σύστημα ψάχνει τη βάση για να δει αν αυτός ο χρήστης είναι ήδη προσθεμένος.
+    \item [3.2] Ο χρήστης είναι ήδη προσθεμένος και το σύστημα δεν κάνει καμία ενέργεια.
+\end{enumerate}
+
+\subsubsection*{Εναλλακτική ροή 2: Διαγραφή χρήστη:}
+\begin{enumerate}
+    \item [4.1] Ο χρήστης επιλέγει εμφάνιση λίστας αγαπημένων, και επιλέγει να αφαιρέσει έναν χρήστη από την λίστα των αγαπημένων του.
+    \item [4.2] Το σύστημα αφαιρεί τον χρήστη αυτόν από τη λίστα αγαπημένων του αρχικού χρήστη
+    \item [4.3] Το σύστημα ενημερώνει αντίστοιχα τον αρχικό χρήστη.
+\end{enumerate}
+
+\subsubsection*{Εναλλακτική ροή 3: Επιλογή αίτησης από τη λίστα ειδοποιήσεων:}
+\begin{enumerate}
+    \item [8.1] Ο χρήστης επιλέγει ένα βιβλίο που βλέπει στη λίστα ειδοποιήσεων, το οποίο ζητάει ένας αγαπημένος χρήστης του με τη μορφή αίτησης.
+    \item [8.2] Το σύστημα μεταβιβάζει τον χρήστη αυτόματα στην σελίδα που αυτός μπορεί να εκπληρώσει την αίτηση αυτή.
 \end{enumerate}
 
 \end{document}
