Added request filling use case from Xristos

--- a/2ο Παραδοτέο/Use-Cases/Files/Use-cases-v0.1.tex
+++ b/2ο Παραδοτέο/Use-Cases/Files/Use-cases-v0.1.tex
@@ -128,7 +128,7 @@
 
 
 \subsection{Ενοικίαση βιβλίου από άλλο χρήστη}
-
+\label{Rental Use Case}
 \subsubsection*{Βασική Ροή <<Ενοικίαση βιβλίου από άλλο χρήστη>>: Συναλλαγή από κοντά:}
 \begin{enumerate}
     \item Ο ενοικιαστής κάνει αίτηση ενοικίασης στον ιδιοκτήτη που επέλεξε για το βιβλίο που αναζήτησε, επιλέγοντας συναλλαγή από κοντά.
@@ -249,6 +249,32 @@
 \begin{enumerate}
     \item [5.3.1] Ο χρήστης απορρίπτει την ενοικίαση του βιβλίου.
     \item [5.3.2] Επιστρέφει στο βήμα 2 στη βασική ροή.
+\end{enumerate}
+
+\subsection{Εκπλήρωση αιτήσεων που έχουν κάνει άλλοι χρήστες}
+
+\subsubsection*{Βασική ροή <<Εκπλήρωση αιτήσεων που έχουν κάνει άλλοι χρήστες>>: Εκπλήρωση αιτήματος:}
+\begin{enumerate}
+    \item Ο χρήστης επιλέγει να δει την οθόνη με τα υπάρχοντα request από την αναζήτηση.
+    \item Το σύστημα ψάχνει για μη εκπληρωμένες αιτήσεις από άλλους χρήστες που να πληρούν τις συνθήκες αναζήτησης του χρήστη και βρίσκει ότι υπάρχουν.
+    \item Το σύστημα εμφανίζει τις αιτήσεις αυτές στον χρήστη (μαζί με στοιχεία όπως το βιβλίο που ζητείται, τον συγγραφέα, την τιμή που προτίθεται να πληρώσει ο χρήστης, τον τρόπο συναλλαγής που θέλει και το σκορ του). 
+    \item Ο αρχικός χρήστης επιλέγει να εκπληρώσει μια από τις αιτήσεις.
+    \item Το σύστημα τον καλεί να επιβεβαιώσει την απόφαση του.
+    \item Ο χρήστης επιβεβαιώνει.
+    \item Ενεργοποιείται το πρωτόκολλο διαχείρισης συναλλαγών και δημιουργείται μια νέα συναλλαγή μεταξύ του αρχικού χρήστη και του χρήστη που έκανε την αίτηση, το οποίο είναι το ίδιο με τη διαδικασία στο use case του κεφαλαίου \ref{Rental Use Case} με τη διαφορά ότι ο χρήστης που έκανε την αίτηση είναι αυτός που πρέπει να επιβεβαιώσει το αρχικό αίτημα (δεν εξηγούμε ξανά όλη την όλη διαδικασία εφόσον κατά τα άλλα είναι η ίδια).
+    \item Το σύστημα επιστρέφει το χρήστη στην οθόνη αναζήτησης requests.
+\end{enumerate}
+
+\subsubsection*{Εναλλακτική ροή 1: Το σύστημα βλέπει ότι δεν υπάρχει αίτημα που δεν είναι εκπληρωμένο:}
+\begin{enumerate}
+    \item [2.1] Το σύστημα ψάχνει για μη εκπληρωμένες αιτήσεις από άλλους χρήστες που να πληρούν τις συνθήκες αναζήτησης του χρήστη και βρίσκει ότι δεν υπάρχουν.
+    \item [2.2] Το σύστημα ενημερώνει κατάλληλα τον χρήστη και του προτείνει να κάνει άλλη αναζήτηση.
+\end{enumerate}
+
+\subsubsection*{Εναλλακτική ροή 2: Ο χρήστης ακυρώνει την εκπλήρωση της αίτησης στο βήμα επιβεβαίωσης:}
+\begin{enumerate}
+    \item [6.1] Ο χρήστης ακυρώνει την εξυπηρέτηση του request.
+    \item [6.2] To σύστημα επιστρέφει στην οθόνη requests.
 \end{enumerate}
 
 \subsection{Αξιολόγηση άλλων χρηστών μετά από την ολοκλήρωση συναλλαγής}
