--- a/2ο Παραδοτέο/Use-Cases/Files/Use-cases-v0.1.tex
+++ b/2ο Παραδοτέο/Use-Cases/Files/Use-cases-v0.1.tex
@@ -196,6 +196,63 @@
     \item[\ref{Τέλος dispute resolved - Τέλος χρημάτων}.3.2.] Το σύστημα προσφέρει αυτόματα το "ποσό ασφαλείας" στον ιδιοκτήτη και απενεργοποιεί τη δυνατότητα του ενοικιαστή να νοικιάσει άλλο βιβλίο, μέχρι να πληρώσει το χρωστούμενο ποσό.
 \end{enumerate}
 
+\subsection{Διαχείριση των βιβλίων που προσφέρει ο χρήστης προς ενοικίαση από άλλους}
+
+\subsubsection*{Βασική ροή <<Διαχείριση των βιβλίων που προσφέρει ο χρήστης \\προς ενοικίαση από άλλους>>: Προσθήκη και ενοικίαση βιβλίου από άλλον χρήστη:}
+\begin{enumerate}
+    \item Ο χρήστης επιλέγει να προβάλλει τη λίστα των βιβλίων που προσφέρει για ενοικίαση.
+    \item Το σύστημα φορτώνει τη λίστα των βιβλίων και την εμφανίζει στον χρήστη.
+    \item Ο χρήστης επιλέγει να προσθέσει ένα/πολλά νέο/α βιβλίο/α προς ενοικίαση από τους υπόλοιπους χρήστες.
+    \item Ο χρήστης συμπληρώνει τα στοιχεία του βιβλίου (τίτλος, συγγραφέας, εκδοτικός οίκος και χρονολογία τύπωσης, κατηγορίες στις οποίες ανήκει το βιβλίο, τρόπος παράδοσης, τιμή, ποσότητα ίδιων βιβλίων) και ολοκληρώνει την προσθήκη.
+    \item Το σύστημα αντιλαμβάνεται ότι κάποιος άλλος χρήστης έχει κάνει αίτημα ενοικίασης του βιβλίου.
+    \item Ο χρήστης αποδέχεται την αίτηση.
+    \item Το σύστημα μειώνει τη ποσότητα των ίδιων βιβλίων που προσφέρει ο χρήστης κατά ένα και αντιλαμβάνεται ότι η ποσότητα δεν μηδενίζεται.
+    \item Δημιουργείται μια νέα συναλλαγή στη σελίδα των τρεχουσών συναλλαγών και ξεκινά η αντίστοιχη διαδικασία ενοικίασης από τη μεριά του ενοικιαστή (εξηγείται αναλυτικά η διαδικασία στο \ref{Rental Use Case}, οπότε δεν θα αναφερθεί ξανά εδώ).
+    \item Αφού το βιβλίο επιστραφεί στον ιδιοκτήτη αυξάνεται η ποσότητα του βιβλίου ξανά κατά 1.
+\end{enumerate}
+
+\subsubsection*{Εναλλακτική ροή 1: Ο χρήστης δεν έχει εισάγει προηγουμένως βιβλία προς ενοικίαση από άλλους χρήστες:}
+\begin{enumerate}
+    \item [2.1] Το σύστημα αντιλαμβάνεται ότι ο χρήστης δεν έχει προσθέσει προηγουμένως βιβλία προς ενοικίαση.
+    \item [2.2] Το σύστημα ενημερώνει αντίστοιχα τον χρήστη.
+\end{enumerate}
+
+\subsubsection*{Εναλλακτική ροή 2: Ο χρήστης επιλέγει να αλλάξει τις πληροφορίες για βιβλίο που έχει ήδη προσθέσει:}
+\begin{enumerate}
+    \item [3.α.1] Ο χρήστης επιλέγει να αλλάξει τις πληροφορίες για κάποιο από τα βιβλία που προσφέρει.
+    \item [3.α.2] Το σύστημα καταγράφει τις αλλαγές.
+    \item [3.α.3] Το σύστημα ενημερώνει τον χρήστη ότι οι αλλαγές έγιναν με επιτυχία.
+\end{enumerate}
+
+\subsubsection*{Εναλλακτική ροή 3: Ο χρήστης επιλέγει να διαγράψει ένα από τα βιβλία από τη λίστα των βιβλίων που προσφέρει προς ενοικίαση:}
+\begin{enumerate}
+    \item [3.β.1] Ο χρήστης επιλέγει να αλλάξει διαγράψει ένα βιβλίο από τη λίστα αυτών που προσφέρει.
+    \item [3.β.2] Το σύστημα ζητάει επιβεβαίωση από τον χρήστη.
+    \item [3.β.3] Ο χρήστης επιβεβαιώνει τη πρόθεση του να διαγράψει την εγγραφή.
+    \item [3.β.4] Το σύστημα καταγράφει την διαγραφή.
+    \item [3.β.5] Το σύστημα ενημερώνει αντίστοιχα τον χρήστη.
+\end{enumerate}
+
+\subsubsection*{Εναλλακτική ροή 4: Ο χρήστης επιλέγει να διαγράψει ένα από τα βιβλία από τη λίστα των βιβλίων που προσφέρει προς ενοικίαση, αλλά δεν επιβεβαιώνει:}
+\begin{enumerate}
+    \item [3.β.4.1] Ο χρήστης απορρίπτει την διαγραφή του βιβλίου.
+    \item [3.β.4.2] Το σύστημα ενημερώνει αντίστοιχα τον χρήστη.
+\end{enumerate}
+
+\subsubsection*{Εναλλακτική ροή 5: Ο χρήστης απορρίπτει την αίτηση ενοικίασης του άλλου χρήστη:}
+\begin{enumerate}
+    \item [6.1] Ο χρήστης απορρίπτει την αίτηση.
+    \item [6.2] Το σύστημα ανανεώνει το status της αίτησης ως "Απόρριψη από ιδιοκτήτη" και την μεταφέρει στα ιστορικά των δύο χρηστών.
+    \item [6.3] Το σύστημα ενημερώνει τον χρήστη ότι η απόρριψη καταγράφτηκε.
+\end{enumerate}
+
+\subsubsection*{Εναλλακτική ροή 6: Το υπόλοιπο ίδιων βιβλίων μηδενίζεται μετά από ενοικίαση:}
+\begin{enumerate}
+    \item [7.1] Το σύστημα μειώνει τη ποσότητα των ίδιων βιβλίων που προσφέρει ο χρήστης κατά ένα και αντιλαμβάνεται ότι η ποσότητα μηδενίζεται.
+    \item [7.2] Το σύστημα αφαιρεί αυτόματα το βιβλίο από την λίστα των βιβλίων που προσφέρει ο χρήστης (ο χρήστης θα μπορεί πλέον μόνο να προβάλλει το βιβλίο στην οθόνη τρεχουσών συναλλαγών).
+    \item [7.3] Η ροή συνεχίζεται από το βήμα 8 της βασικής ροής.
+\end{enumerate}
+
 \subsection{Διαχείριση των αιτήσεων που έχει κάνει ο χρήστης}
 
 \subsubsection*{Βασική ροή <<Διαχείριση των αιτήσεων που έχει κάνει ο χρήστης>>: Προσθήκη νέου αιτήματος:}
@@ -261,7 +318,7 @@
     \item Ο αρχικός χρήστης επιλέγει να εκπληρώσει μια από τις αιτήσεις.
     \item Το σύστημα τον καλεί να επιβεβαιώσει την απόφαση του.
     \item Ο χρήστης επιβεβαιώνει.
-    \item Ενεργοποιείται το πρωτόκολλο διαχείρισης συναλλαγών και δημιουργείται μια νέα συναλλαγή μεταξύ του αρχικού χρήστη και του χρήστη που έκανε την αίτηση, το οποίο είναι το ίδιο με τη διαδικασία στο use case του κεφαλαίου \ref{Rental Use Case} με τη διαφορά ότι ο χρήστης που έκανε την αίτηση είναι αυτός που πρέπει να επιβεβαιώσει το αρχικό αίτημα (δεν εξηγούμε ξανά όλη την όλη διαδικασία εφόσον κατά τα άλλα είναι η ίδια).
+    \item Ενεργοποιείται το πρωτόκολλο διαχείρισης συναλλαγών και δημιουργείται μια νέα συναλλαγή (στην οθόνη των τρεχουσών συναλλαγών) μεταξύ του αρχικού χρήστη και του χρήστη που έκανε την αίτηση, το οποίο είναι το ίδιο με τη διαδικασία στο use case του κεφαλαίου \ref{Rental Use Case} με τη διαφορά ότι ο χρήστης που έκανε την αίτηση είναι αυτός που πρέπει να επιβεβαιώσει το αρχικό αίτημα (δεν εξηγούμε ξανά όλη την όλη διαδικασία εφόσον κατά τα άλλα είναι η ίδια).
     \item Το σύστημα επιστρέφει το χρήστη στην οθόνη αναζήτησης requests.
 \end{enumerate}
 
@@ -468,5 +525,38 @@
     \item [8.1] Ο χρήστης επιλέγει ένα βιβλίο που βλέπει στη λίστα ειδοποιήσεων, το οποίο ζητάει ένας αγαπημένος χρήστης του με τη μορφή αίτησης.
     \item [8.2] Το σύστημα μεταβιβάζει τον χρήστη αυτόματα στην σελίδα που αυτός μπορεί να εκπληρώσει την αίτηση αυτή.
 \end{enumerate}
+
+\subsection{Προβολή ιστορικού συναλλαγών και στατιστικών:}
+
+\subsubsection*{Βασική ροή <<Προβολή ιστορικού συναλλαγών και στατιστικών>>:}
+\begin{enumerate}
+    \item Ο χρήστης επιλέγει να προβάλλει το ιστορικό των συναλλαγών του μαζί με σχετικά στατιστικά.
+    \item Η πλατφόρμα αναζητεί και βρίσκει τις ολοκληρωμένες συναλλαγές που έχει κάνει ο χρήστης.
+    \item Το σύστημα δείχνει στον χρήστη την λίστα των συναλλαγών.
+    \item Επίσης επεξεργάζεται τα δεδομένα και δείχνει στον χρήστη σχετικά με τα βιβλία που προσφέρει αυτός προς ενοικίαση, μια γραφική παράσταση με το πλήθος συναλλαγών που έκανε με άλλους χρήστες ανά ηλικιακή ομάδα (13 - 16, 17 - 23, 24 - 35, 36 - 50, 50 - 60, 60+) και μια γραφική παράσταση με το πλήθος συναλλαγών ανά κατηγορία βιβλίου (fantasy, non-fiction κ.α.).
+    \item Ο χρήστης επιλέγει συγκεκριμένα φίλτρα για να απομονώσει συγκεκριμένες εγγραφές στη λίστα του ιστορικού του (με βάση ηλικία, κατηγορία βιβλίου, συγγραφέα, τίτλο βιβλίου, τιμή, ημερομηνία) και σειράς ταξινόμησης (αύξουσα ή φθίνουσα ημερομηνία).
+    \item Το σύστημα επεξεργάζεται τα δεδομένα και τα εμφανίζει φιλτραρισμένα στον χρήστη.
+\end{enumerate}
+
+\subsubsection*{Εναλλακτική ροή 1: Το σύστημα δεν βρίσκει εγγραφές στο ιστορικό συναλλαγών:}
+\begin{enumerate}
+    \item [2.1, 3.1] Το σύστημα αντιλαμβάνεται ότι δεν έχει καταγράψει ολοκληρωμένες συναλλαγές για τον χρήστη.
+    \item [2.2, 3.2] Το σύστημα ενημερώνει τον χρήστη αντίστοιχα.
+\end{enumerate}
+
+\subsubsection*{Εναλλακτική ροή 2: Το σύστημα δεν βρίσκει εγγραφές για τα φίλτρα του χρήστη:}
+\begin{enumerate}
+    \item [6.1] Το σύστημα αντιλαμβάνεται ότι δεν έχει καταγράψει ολοκληρωμένες συναλλαγές για τα φίλτρα που έχει επιλέξει ο χρήστης.
+    \item [6.2] Το σύστημα ενημερώνει τον χρήστη αντίστοιχα.
+\end{enumerate}
+
+\section{Συμμετοχή και Ρόλοι στη Συγγραφή του Κειμένου}
+\begin{enumerate}
+	\item \textbf{Γρηγόρης Καπαδούκας:} Author (Κεφαλαίων 1, 2.1, 2.2), Editor, Peer Reviewer
+	\item \textbf{Χρήστος Μπεστητζάνος:} Author (Κεφαλαίων 2.4, 2.5, 2.6)
+   	\item \textbf{Νικόλαος Αυγέρης:} Author (Κεφαλαίων 2.7, 2.8, 2.9)
+	\item \textbf{Περικλής Κοροντζής:} Author (Κεφαλαίων 2.3, 2.10)
+\end{enumerate}
+
 
 \end{document}
